# showcase-gd-2.2081

./: CMakeLists.txt  mod.json
src/: main.cpp
src/hooks/: level_info_hook.cpp  on_player_death.cpp
src/includes/: geode.hpp  task_poll.hpp
src/managers/: api_manager.cpp  api_manager.hpp  crash_log_manager.cpp  crash_log_manager.hpp  replay_manager.cpp
src/tasks/: authenticate.cpp  get_level_replay_status.cpp  get_replay.cpp  get_upload_submissions_left.cpp  report_crash_log.cpp  report_death.cpp  upload_submissions.cpp
