cmake_minimum_required(VERSION 3.21)
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
if ("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS" OR IOS)
    set(CMAKE_OSX_ARCHITECTURES "arm64")
else()
    set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
endif()
set(CMAKE_CXX_VISIBILITY_PRESET hidden)

set(CMAKE_INTERPROCEDURAL_OPTIMIZATION ON)

project(Showcase VERSION 1.0.0)

# Add all source files inside src (recursively)
file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS src/*.cpp)
list(FILTER SOURCES EXCLUDE REGEX "/src/hooks/")
list(FILTER SOURCES EXCLUDE REGEX "/src/managers/(interferences_manager|recorder_manager|replay_manager)\\.cpp$")
# set(CMAKE_CXX_CLANG_TIDY "clang-tidy;-checks=-clangd-unused-includes")

# Set up the mod binary
add_library(${PROJECT_NAME} SHARED ${SOURCES})

set_property(TARGET ${PROJECT_NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)

if (NOT DEFINED ENV{GEODE_SDK})
    message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
else()
    message(STATUS "Found Geode: $ENV{GEODE_SDK}")
endif()

add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

# add_library(${PROJECT_NAME} SHARED ${SOURCES})

# if (NOT DEFINED ENV{GEODE_SDK})
#     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
# else()
#     message(STATUS "Found Geode: $ENV{GEODE_SDK}")
# endif()

# add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)

CPMAddPackage("gh:maxnut/GDReplayFormat#72078e54e2b0007c2f01150916f874182593d243")
target_link_libraries(${PROJECT_NAME} libGDR)

# Set up dependencies, resources, and link Geode.
setup_geode_mod(${PROJECT_NAME})
